# appli_gestion

./: CMakeLists.txt  CalculFlux.ods  README.MD
Portfolio/: app.py
data/: .~lock.ClosePrice.xlsx#  .~lock.CloseRet.xlsx#  .~lock.call_quanto_market.csv#  .~lock.foreign_perf_basket_market.csv#  .~lock.quanto_exchange_market.csv#  .~lock.ti.xlsx#  ClosePrice.csv  ClosePrice.xlsx  CloseRet.xlsx  TauxInteret.xlsx  XFORPrice.csv  call_quanto_params.json  output.csv  ti.xlsx  xforprice.xlsx  xforret.xlsx
front-python/: Acceuil.py  PortfolioHandler.py  app.py  constantes.py  data_provider.py  dataframes.py  output.json  sortie.json  styles.css  test.ipynb
front-python/assets/: styles.css
output/: call_currency_portfolio.json
src/: Asset.cpp  Asset.hpp  CMakeLists.txt  ChoreliaOption.cpp  Currency.cpp  Currency.hpp  FixedTimesOracle.cpp  FixedTimesOracle.hpp  GlobalModel.cpp  GlobalModel.hpp  GridOracle.cpp  IRebalancingOracle.hpp  JsonParser.cpp  JsonParser.hpp  MonteCarlo.cpp  MonteCarlo.hpp  Option.hpp  Portfolio.cpp  Portfolio.hpp  Position.cpp  Position.hpp  RiskyAsset.cpp  RiskyAsset.hpp  TimeGrid.cpp  TimeGrid.hpp  Utils.cpp  Utils.hpp  call_currency.cpp  call_quanto.cpp  foreign_asian.cpp  foreign_perf_basket.cpp  hedging_portfolio.cpp  parsing.cpp  parsing.hpp  python_bindings.cpp  quanto_exchange.cpp
